# bitfielder_cmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  SwitchToolchain.cmake  sounds.flp  vcpkg.json
assets/fonts/: font.json
assets/renderers/blocks/: air.json  block_gold.json  block_iron.json  bush.json  dirt.json  gold.json  gold_block.json  grass.json  iron_block.json  leaves.json  mushroom.json  stick.json  stone.json  torch.json  wheat.json  wood.json  wood_log.json  wood_planks.json  wool.json  wool_black.json  wool_blue.json  wool_cyan.json  wool_green.json  wool_magenta.json  wool_red.json  wool_white.json  wool_yellow.json
assets/renderers/blocks/particles/: block_gold.json  block_iron.json  dirt.json  gold.json  gold_block.json  iron_block.json  leaves.json  stone.json  wood.json  wool.json
assets/renderers/items/: block_iron.json  bush.json  dirt.json  leaves.json  mushroom.json  stick.json  stone.json  torch.json  wheat.json  wood_log.json  wood_planks.json
assets/shaders/: block_back.glsl  block_light.glsl  block_shadow.glsl  common.glsl  fragment.glsl  fragment_back.glsl  fragment_light.glsl  fragment_shadow.glsl  skin.glsl  vertex.glsl
src/: engine.cpp  engine.h  main.cpp  main_scene.cpp  main_scene.h  scene.h
src/client/: client.cpp  client.h  client_input.cpp  client_input.h  client_packet_manager.cpp  client_packet_manager.h  font_factory.cpp  font_factory.h  local_client_connection.cpp  local_client_connection.h  local_server_connection.cpp  local_server_connection.h  main.cpp  option_list.cpp  option_list.h  remote_server_connection.cpp  remote_server_connection.h  server_connection.h
src/client/menu/: input_list_option.cpp  input_list_option.h  list_option.h  option_list.cpp  option_list.h  option_list_renderer.cpp  option_list_renderer.h  text_list_option.cpp  text_list_option.h
src/client/scenes/: local_world_scene.cpp  local_world_scene.h  main_scene.cpp  main_scene.h  menu_scene.cpp  menu_scene.h  remote_world_scene.cpp  remote_world_scene.h  world_scene.cpp  world_scene.h
src/client/world/: camera.cpp  camera.h  client_content.cpp  client_content.h  hud.cpp  hud.h  renderer_factory.cpp  renderer_factory.h  shadow_buffer.cpp  shadow_buffer.h  world_renderer.cpp  world_renderer.h
src/client/world/block/: block_map_renderer.cpp  block_map_renderer.h  block_mesh.cpp  block_mesh.h  block_render_data.h  block_renderer_factory.cpp  block_renderer_factory.h  block_sounds.cpp  block_sounds.h
src/client/world/block/components/: block_auto_renderer_component.h  block_basic_renderer_component.h  block_color_component.h  block_frames_component.h  block_partial_component.h  block_particle_component.h  block_renderer_component.h  block_sound_component.h  block_sprite_component.h  block_sprite_set_component.h  block_texture_component.h  partial_block_component.h
src/client/world/block/renderers/: auto_block_renderer.cpp  auto_block_renderer.h  basic_block_renderer.cpp  basic_block_renderer.h  block_renderer.h  block_renderer_impl.h
src/client/world/content/: client_content.cpp  client_content.h
src/client/world/entity/: entity_renderer.cpp  entity_renderer.h  sprite_aim_set.cpp  sprite_aim_set.h
src/client/world/entity/animation/: animation.cpp  animation.h  (+2 more)
src/client/world/item/: item_renderer.h  item_renderer_factory.cpp  item_renderer_factory.h
src/core/: box2.h  color.cpp  color.h  direction.cpp  direction.h  file_loader.cpp  file_loader.h  game_time.cpp  game_time.h  packet.cpp  packet.h  packet_types.h  random.cpp  random.h
src/engine/: engine.cpp  engine.h  file_loader.cpp  file_loader.h  input.cpp  input.h  input_action.cpp  input_action.h  scene.h
src/gfx/: shader.h  sprite_batch.cpp  sprite_batch.h  sprite_mesh.cpp  sprite_mesh.h  sprite_renderer.cpp  sprite_renderer.h  sprite_vertex.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
src/gfx/core/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h
src/gfx/sprite/: sprite.cpp  sprite.h  sprite_batch.cpp  sprite_batch.h  sprite_frames.h  sprite_mesh.cpp  sprite_mesh.h  sprite_program.cpp  sprite_program.h  sprite_renderer.cpp  sprite_renderer.h  sprite_set.cpp  sprite_set.h
src/gfx/sprite/animation/: sprite_animation.cpp  sprite_animation.h  sprite_animation_set.cpp  sprite_animation_set.h  sprite_frames.cpp
src/gfx/text/: font.cpp  font.h
src/server/: block_light_generator.h  block_map_generator.cpp  block_map_generator.h  client_connection.h  main.cpp  remote_client_connection.cpp  remote_client_connection.h  server.cpp  server.h  server_host.cpp  server_host.h
src/sound/: sound.cpp  sound.h  sound_set.cpp  sound_set.h
src/world/: content.cpp  content.h  world.cpp  world.h  world_file.cpp  world_file.h
src/world/block/: block_chunk.cpp  block_chunk.h  block_content.cpp  block_content.h  block_light_generator.cpp  block_light_generator.h  block_map.cpp  block_map.h  block_map_element.cpp  block_map_element.h  block_sample.cpp  block_sample.h  block_serializer.cpp  block_serializer.h  block_types.cpp  block_types.h
src/world/block/components/: block_attachable_component.h  block_collision_component.h  block_index_component.h  block_light_component.h  block_name_component.h  block_one_way_component.h  block_opaque_component.h  one_way_block_component.h
src/world/content/: content.cpp  content.h
src/world/entity/: entities.cpp  entities.h  entity_content.cpp  entity_content.h
src/world/entity/components/: aim_component.h  animation_component.h  body_component.h  flip_component.h  id_component.h  inventory_component.h  position_component.h  sprite_animation_component.h  sprite_flip_component.h  velocity_component.h
src/world/entity/systems/: body_system.cpp  body_system.h  entity_system.h  entity_system_impl.h
src/world/item/: inventory.cpp  inventory.h  item_content.cpp  item_content.h
src/world/item/components/: item_block_component.h
src/world/registry/: entity_registry.cpp  entity_registry.h
src/world/registry/components/: registry_index_component.h  registry_name_component.h
(+40 files in other folders)
